force-app/main/default/objects/Cooking_Cooling__c/Cooking_Cooling__c.object-meta.xml
<CustomObject>
    <label>Cooking &amp; Cooling</label>
    <nameField>
        <label>Cooking &amp; Cooling Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cooking &amp; Cooling</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>