force-app/main/default/objects/Cooking_Cooling__c/fields/Cooked_Food_Core_Temp__c.field-meta.xml
<CustomField>
    <fullName>Cooked_Food_Core_Temp__c</fullName>
    <label>Cooked Food Core Temp</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>