force-app/main/default/objects/Cooking_Cooling__c/fields/Cooling_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Cooling_Start_Time__c</fullName>
    <label>Cooling Start Time</label>
    <type>DateTime</type>
</CustomField>