force-app/main/default/objects/Cooking_Cooling__c/fields/Cooling_Start_Time_Temp__c.field-meta.xml
<CustomField>
    <fullName>Cooling_Start_Time_Temp__c</fullName>
    <label>Cooling Start Time Temp</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>