force-app/main/default/objects/Cooking_Cooling__c/fields/Temp_within_2_Hours__c.field-meta.xml
<CustomField>
    <fullName>Temp_within_2_Hours__c</fullName>
    <label>Temp within 2 Hours</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>