force-app/main/default/objects/Cooking_Cooling__c/fields/Time_Within_2_Hours__c.field-meta.xml
<CustomField>
    <fullName>Time_Within_2_Hours__c</fullName>
    <label>Time Within 2 Hours</label>
    <type>DateTime</type>
</CustomField>